postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name:  postgres
          hostPath:
            path:  /var/lib/postgresql/data
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres
          mountPath: /var/lib/postgresql/data
      restartPolicy: Always
