postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
