redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  redis
  namespace: default
spec:
  selector:
    app:  redis
  ports:
  - protocol: TCP
    port: 6379
