result.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: result
spec:
  selector:
    app: result
  ports:
  - protocol: TCP
    port: 80
