traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-public
  name: traefik
spec:
  selector:
    app: traefik
  ports:
  - protocol: TCP
    name: cluster
    port: 80
    targetPort: 8080
  - protocol: TCP
    name: host
    port: 30021
