poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: poll
  labels:
    name: poll
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: poll
              port:
                number: 80
