result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: result
  labels:
    name: result
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: result
              port:
                number: 80
